Fixed strange clipping issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,7 +80,9 @@ body > section.content{
     padding: 20px 0px 0px 0px;
     position: relative;
     z-index: 50;
+    min-width: 1080px;
 }
+body > section.content .main-content{ background-color: #f5f5ef; }
 header{ 
     height: 45px;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.2);
@@ -88,6 +90,7 @@ header{
     z-index: 1000;
     display: block;
     overflow: visible;
+    min-width: 1080px;
 }
 header div.left-menu{
     position: relative;
